--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "embla-carousel-autoplay": "^8.1.1",
     "embla-carousel-react": "^8.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
