--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "embla-carousel-autoplay": "^8.1.1",
     "embla-carousel-react": "^8.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
