--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "embla-carousel-autoplay": "^8.1.1",
     "embla-carousel-react": "^8.1.1",
+    "font-awesome": "^4.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
-    "react-slick": "^0.30.2"
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
