--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "desafio-maeztra",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
