--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "desafio-maeztra",
+  "homepage": "http://robs-am.github.io/desafio-maeztra",
   "private": false,
   "version": "0.0.0",
   "type": "module",
